--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,46 @@
+.tasks {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 30px;
+}
 
+.task {
+    width: 400px;
+    padding: 10px;
+    border: 1px solid black;
+    text-align: center;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.task__heading {
+    font-size: 40px;
+    margin-bottom: 30px;
+
+}
+
+.task__heading--complete {
+    text-decoration: line-through;
+}
+
+.tasks-form {
+    width: 400px;
+    padding: 10px;
+    border: 1px solid black;
+    text-align: center;
+    border-radius: 10px;
+    margin: 0 auto;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+
+.input {
+    height: 44px;
+    width: 97%;
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 5px 10px;
+}
